# Schachengine

./: CMakeLists.txt  Moves in Position of Chess.xlsx  README.md  benchmarking.c  benchmarking.h  board.c  board.h  converter.c  converter.h  eval.c  eval.h  main.c  makemove.c  makemove.h  move_gen.c  move_gen.h  search.c  search.h  uci.c  uci.h  ~$afiken.docx
